Further work on kubevirt + coder
Co-Authored-By: BobyMCbobs <BobyMCbobs@users.noreply.github.com>
Co-Authored-By: hh <hh@users.noreply.github.com>

--- a/examples/templates/talos-equinix-metal-cluster-api/README.org
+++ b/examples/templates/talos-equinix-metal-cluster-api/README.org
@@ -11,7 +11,7 @@ This is currently in exploration and may go away.
 
 * Initialise
 
-#+begin_src tmate
+#+begin_src tmate :window
 EXP_CLUSTER_RESOURCE_SET=true clusterctl init --infrastructure=packet
 #+end_src
 
